<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Let Me Know</string>
    <string name="where">Tell us where you are going&#8230;</string>
    <string name="mapButton">Select on map</string>
    <string name="who">Who do you want us to tell?</string>
    <string name="contactsButton">Select from contacts</string>
    <string name="what">What shall we tell them?</string>
    <string name="confirm">Confirm</string>
    <string name="reset">Reset</string>
    <string name="contactPicture">Contact</string>
    <string name="logo">Let Me Know</string>
    <string name="markerIcon">Marker Icon</string>
    <string name="contactIcon">Contact Icon</string>
    <string name="tick">Tick Icon</string>
    <string name="confirmation">We\'ve got it from here, We\'ll let your contact know when you arrive at your destination.</string>
    <string name="locationSettingsTitle">Location Settings</string>
    <string name="locationIntervalTitle">Location Update Interval</string>
    <string name="settings">Settings</string>
    <string name="intervalInMin">Interval in minutes</string>
    <string name="locationDistanceTitle">Distance to notify from</string>
    <string name="distance">Distance from Destination</string>
    <string name="cancel">Cancel</string>
    <string name="allMessages">Messages</string>
    <string name="delete">Delete</string>
    <string name="postCode">Or enter a post code</string>
    <string name="choosePhone">Choose a number for this contact</string>
    <string name="chooseMessage">Choose message</string>
    <string name="saveMessage">Save message</string>
    <string name="chooseLocation">Choose location</string>
    <string name="saveLocation">Save location</string>
    
    <string name="select">Select</string>
    <string name="messages">Messages</string>
    <string name="new_message">New Message</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="newMessage">New Message</string>
    <string name="save">Save</string>
    
    <string name="contact">Contact</string>
    <string name="message">Message</string>
    <string name="persistence">Persistent Message</string>
    <string name="options">Options</string>
    <string name="state">Active</string>
    
    <color name="transparent">#00FFFFFF</color>
    <color name="white">#FFFFFF</color>
    <color name="grey">#818181</color>
    <color name="lightGrey">#b9b9b9</color>
    <color name="aqua">#5e7974</color>
    <color name="blue">#73c5ff</color>
    <color name="black">#000000</color>
    <color name="barblue">#0e8de7</color>
    <color name="background">#E8F8FF</color>
    <color name="frame">#B4DCED</color>
    <color name="green">#92c200</color>
    <color name="lightGreen">#a9dd0d</color>
    
    <string-array name="intervalOptions">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    
    <string-array name="intervalValues">
        <item>60000</item>
        <item>120000</item>
        <item>180000</item>
        <item>240000</item>
        <item>300000</item>
    </string-array>
    
    <string-array name="distanceOptions">
        <item>50 Metres</item>
        <item>1 Mile</item>
    </string-array>
    
    <string-array name="distanceValues">
        <item>0.001</item>
        <item>0.01</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>
