<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/locationSettingsTitle">
        <ListPreference 
            android:key="interval"
            android:title="@string/locationIntervalTitle"
            android:entries="@array/intervalOptions"
            android:entryValues="@array/intervalValues"
            android:dialogTitle="@string/intervalInMin"
            android:numeric="integer"
            android:defaultValue="4" />
        <ListPreference 
            android:key="distance"
            android:title="@string/locationDistanceTitle"
            android:entries="@array/distanceOptions"
            android:entryValues="@array/distanceValues"
            android:dialogTitle="@string/distance" 
            android:defaultValue="0.01"/>
    </PreferenceCategory>
</PreferenceScreen>